fix double borders on grid-squares

--- a/src/App.css
+++ b/src/App.css
@@ -230,7 +230,7 @@
   color: #3d2c1e;
   font-size: 1.3em;
   font-weight: bold;
-  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+  transition: transform 0.2s ease, opacity 0.2s ease;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6),
     inset 0px 3px 8px rgba(255, 255, 255, 0.7),
     inset 0px -4px 8px rgba(0, 0, 0, 0.4);
